# telebuilder2

./: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  appveyor.yml  pyproject.toml
.circleci/: config.yml
conda.recipe/: meta.yaml
src/telebuilder2/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
